--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <!-- UPDATE: Add description, author, og:site_name, og:title, and og:description text for your course. -->
     <!-- NOTE: Text presented in ALL_CAPS indicate values you should replace. -->
-    <title>Syllabus Template</title>
-    <meta name="description" content="To be used as a template for your course">
-    <meta name="author" content="INSTRUCTOR_NAME (INSTRUCTOR_NAME@makeschool.com)">
-    <meta property="og:site_name" content="Syllabus Template">
-    <meta property="og:title" content="Syllabus Template">
-    <meta property="og:description" content="To be used as a template for your course">
+    <title>SPD 1.3</title>
+    <meta name="description" content="Team Software Project">
+    <meta name="author" content="Dan Morse (dan@makeschool.com)">
+    <meta property="og:site_name" content="SPD 1.3">
+    <meta property="og:title" content="SPD 1.3">
+    <meta property="og:description" content="Team Software Project">
     <!-- END CUSTOMIZATION -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -21,9 +21,9 @@
     <meta name="keywords" content="makeschool">
     <meta property="og:type" content="website">
     <!-- UPDATE: Make sure to update all REPO_NAME values for your course repo in the following object.-->
-    <meta property="og:url" content="https://make-school-courses.github.io/REPO_NAME_HERE">
-    <meta property="og:image" content="http://make-school-courses.github.io/REPO_NAME_HERE/Web/logo-icononly.svg">
-    <meta property="og:image:secure_url" content="https://make-school-courses.github.io/REPO_NAME_HERE/Web/logo-icononly.svg">
+    <meta property="og:url" content="https://make-school-courses.github.io/SPD-1.3-Team-Software-Project">
+    <meta property="og:image" content="http://make-school-courses.github.io/SPD-1.3-Team-Software-Project/Web/logo-icononly.svg">
+    <meta property="og:image:secure_url" content="https://make-school-courses.github.io/SPD-1.3-Team-Software-Project/Web/logo-icononly.svg">
     <meta property="og:image:type" content="image/svg">
     <meta property="og:image:width" content="250">
     <meta property="og:image:height" content="250">
@@ -38,7 +38,7 @@
       window.$docsify = {
         logo: 'Web/logo-icononly.svg',
         name: 'Syllabus Template',
-        repo: 'Make-School-Courses/Syllabus-Template',
+        repo: 'Make-School-Courses/SPD-1.3-Team-Software-Project',
         themeColor: '#126893',
         formatUpdated: '{MM}/{DD} {HH}:{mm}',
         executeScript: true,
@@ -61,7 +61,7 @@
           noData: 'No Results!',
           depth: 4,
           hideOtherSidebarContent: false,
-          namespace: 'Syllabus-Template',
+          namespace: 'SPD-1.3-Team-Software-Project',
         },
         copyCode: {
           buttonText: '📋 Click to Copy',
